--- a/index.html
+++ b/index.html
@@ -69,12 +69,17 @@
                                     <p>¡Hola! Yo soy Jesus</p>
                                 </div>
                                 
-
+                                <div data-aos="fade-down"
+                                data-aos-easing="linear"
+                                data-aos-duration="1500">
                                 <p class="main__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, quasi. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint mollitia unde expedita dolores. Quibusdam repellat beatae ex harum, molestiae dolor sed magnam
                                     deleniti, tempore voluptates impedit, sapiente quasi iure eligendi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore perferendis nulla, at doloremque soluta deleniti dolorum molestiae enim provident recusandae
                                     illo quibusdam autem eius laborum eaque rem nihil architecto officiis.
 
                                 </p>
+
+                                </div>
+                                
 
                                 <form action="./archivos/Cv - Jesus Salas Castillo.pdf">
                                     <input type="submit" value="Descargar CV"/>
@@ -82,7 +87,7 @@
                             </div>
 
 
-                            <img class='img' src="./img/developer-activity-animate.svg" alt="Imagen tecnológica"/>
+                            <img class="img"  src="./img/developer-activity-animate.svg" alt="Imagen tecnológica"/>
                             <!--div class="my_description">
                                 <div-->
                         </section>
